--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color: #052a4b;
-  background-color: #f5f3ed;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  color: #1c1c1d;
+  background-color: #fcfcfc;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -22,8 +20,7 @@ body {
   font-family: sans-serif;
   line-height: 1.5;
   font-size: 16px;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-right: 0;
 }
 
 h1,
@@ -57,6 +54,4 @@ button {
 
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
 }
