--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -18,6 +18,32 @@
   border-radius: 10px;
   outline: none;
   display: flex;
-  gap: 15px;
+  justify-content: center;
   align-items: center;
+  max-width: 90vw;
+  max-height: 80vh;
+  width: auto;
+  height: auto;
+  overflow: hidden;
+}
+
+.imageBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.image {
+  max-width: 100%;
+  max-height: calc(100% - 20px);
+  object-fit: cover;
+}
+
+@media screen and (min-width: 1124px) {
+  .modal {
+    max-width: 80vw;
+  }
 }
